<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>potential_field</name>
  <version>0.0.0</version>
  <description>potential_field controller for obstacle Avoidance</description>
  <maintainer email="kimsanmaro@naver.com">sw</maintainer>
  <license>TODO: License declaration</license>

  <!-- <build_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python-transforms3d-pip</test_depend>


  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_transformations</depend>
  <!-- <depend>transforms3d</depend> -->



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
